<resources>
    <string name="app_name">CODE WITH ARAFAT SignUp Form </string>
    <string name="user_name">UserName</string>
    <string name="form_username">User Name</string>
    <string name="form_email">Email ID</string>
    <string name="form_phone">Phone No</string>
    <string name="form_password">Password</string>
    <string name="already_member">I am already a member.</string>
    <string name="new_member">New Here ? Sign up instead.</string>
    <string name="nameerror">Enter a valid name with at least 3 to 10 characters or number</string>
    <string name="emailerror">Enter a valid email</string>
    <string name="mobileerror">Enter a valid mobile with at least 8 to 11 number</string>
    <string name="passworderror">The password must contain at least 5 to 20 characters or number</string>
</resources>